# AI-Opportunity-Validation-Framework

./: .gitignore  CASE-STUDY.md  FRAMEWORK.md  GAPS-AND-LIMITATIONS.md  LICENSE  README.md  pyproject.toml
docs/: RUNNER-RECIPE.md  analysis-long-form-conversational.md  benchmark-methodology.md  business-kpi-mapping-memory-canonicalization.md  business-kpi-mapping-memory-lifecycle.md  business-kpi-mapping-model.md  business-kpi-mapping-policy.md  business-kpi-mapping-prompt.md  business-kpi-mapping-recovery.md  business-kpi-mapping-tools.md  experiments.md  finding-ann-scale.md  finding-cadence-invariance.md  finding-case-study-financial.md  finding-conversational-llm.md  finding-coref-doesnt-help.md  finding-cross-dim-cost-weighted.md  finding-cross-dim-full-matrix.md  finding-cross-dim-interaction.md  finding-cross-dim-real-llm-stage3-scaffold.md  finding-full-ladder-sweep.md  finding-gc-cadence-matrix.md  finding-gc-differentiated-stage2.md  finding-gc-stage2-baseline.md  finding-gc-stage2-revision-v0.1.2.md  finding-gc-stage3-real-text.md  finding-gc-stage4-shim.md  finding-gc-tombstone-api-and-v017.md  finding-gc-v016-and-workload-extensions.md  finding-gc-variant-evolution-v013-v015.md  finding-graphiti-adapter-phase2.md  finding-graphiti-adapter-revision.md  finding-graphiti-f1-stage5.md  finding-investment-prioritization.md  finding-longmemeval-regression.md  finding-market-revalidation-2026-07.md  finding-mem0-adapter-phase1.md  finding-mem0-adapter-real-llm-stage5.md  finding-mem0-comparison.md  finding-mem0-f1-stage5.md  (+43 more)
experiments/: ann_scale_bench.py  case_study_expanded.py  case_study_financial.py  ci_check_f1_regression.py  claude_api_conversational_bench.py  claude_api_quality_bench.py  cognee_retrieval_f1_benchmark.py  conversational_llm_bench.py  coref_conversational_bench.py  cross_dim_cost_weighted.py  cross_dim_full_matrix.py  cross_dim_real_llm_stage3.py  cross_dim_stage2.py  gc_long_running_simulation.py  gc_retrieval_f1_benchmark.py  gc_stage2_baseline.py  gc_stage2_differentiated.py  gc_stage3_real_text.py  gc_stage4_integration_shim.py  gc_sweep_cadence_matrix.py  graphiti_retrieval_f1_benchmark.py  graphiti_smoke_test_real_llm.py  investment_prioritization.py  ladder_sweep_real_data.py  mem0_baseline.py  mem0_multi_session_bench.py  mem0_retrieval_f1_benchmark.py  mem0_smoke_test_real_llm.py  mem0_wrapper_live_bench.py  mt_ann_scale_bench.py  multitenant_tier_b_score.py  ner_long_form_demo.py  ner_longmemeval_compare.py  open_world_alias_bench.py  policy_stage2_baseline.py  prompt_stage2_baseline.py  real_dataset_bench.py  (+8 more)
(+155 files in other folders)
