[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-wedge-harness"
version = "0.0.1"
description = "Reusable harness for evaluating AI/ML/LLM opportunities. First case study: deterministic entity-normalization proxy."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
neural = ["model2vec>=0.5"]
ann = ["hnswlib>=0.8", "numpy>=1.24"]
ner = ["spacy>=3.7"]
ner-transformers = ["transformers>=4.40", "torch>=2.0"]

[project.scripts]
amg-run = "runner.canonicalization_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["runner", "fixtures"]
